# git-sync-tool

./: .gitignore  CLAUDE.md  README.md  TODO.md  git-cloner.py  install.sh  pyproject.toml
src/git_cloner/: __init__.py  __main__.py  git_cloner.py
